create module collection, fix module log
